--- a/src/App.css
+++ b/src/App.css
@@ -4,23 +4,32 @@
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  height: 80px;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  height: 150px;
+  padding: 20px;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* align-items: center; */
+  /* justify-content: center; */
+  /* font-size: calc(10px + 2vmin); */
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-title {
+  font-size: 1.5em;
 }
+
+.App-intro {
+  font-size: large;
+}
+
+/* .App-link {
+  color: #61dafb;
+} */
 
 @keyframes App-logo-spin {
   from {
@@ -29,4 +38,77 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+body {
+  padding: 15px;
+  background-color: white;
+  font: Belleza;
+}
+
+footer {
+  background-color: #53565A;
+  color: white;
+  margin-top: 10px;
+}
+
+footer  p {
+  margin-top: 0.8em!important;
+  margin-left: 1.5em;
+}
+
+.main {
+  background-color: white;
+  color: black;
+  height: 100%;
+  min-height: 100%;
+}
+​
+.mainDiv {
+  margin: auto;
+  width: 90%;
+  padding: 5px;
+}
+​
+.sidebar {
+  display: flex;
+  background-color: #53565A; 
+  margin-top: 10px;
+}
+​
+ul {
+  list-style-type: 'none';
+}
+
+.sidebar-list-styling{
+  padding-left: 50px;
+  padding-top: 15px;
+  width: 20%;
+  background-color: #53565A;
+  color: white;
+}
+​
+.sidebar-list a{
+  color: white;
+  padding: 0;
+}
+​
+.sidebar-route{ 
+  flex: 1;
+  padding: '00px'; 
+}
+​
+.header {
+  margin-top: 0.5em!important;
+  text-align: center;
+  background-color: #53565A; 
+  color: white;
+}
+​
+.header a {
+  color: white;
+}
+​
+.header  p {
+  margin-top: 0.8em!important;
 }
