movie app addition

--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,7 @@ ul {
 .sidebar-list-styling{
   padding-left: 30px;
   padding-top: 25px;
+  padding-bottom: 30px;
   width: 20%;
   background-color: #53565A;
   color: #ffffff;
