bitcoin chart done

--- a/pieclient/src/components/Navbar/Logout/Logout.css
+++ b/pieclient/src/components/Navbar/Logout/Logout.css
@@ -1,6 +1,4 @@
 #logout {
-    display: flex;
-    justify-content: right;
-    margin: 0;
-    float: right;
+    margin-left: 93%;
+    height: 100px;
 }
