--- a/pieclient/src/components/Navbar/Navbar.css
+++ b/pieclient/src/components/Navbar/Navbar.css
@@ -1,13 +1,13 @@
-nav {
-    margin: 0;
-    background-color: purple;
-    color: orange;
-    height: 100px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+nav{
+  margin: 0;
+  background-color: purple;
+  color: orange;
+  height: 100px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between
 }
 
-img {
-    height: 100px;
+nav img{
+  height: 100%;
 }
